# Kapture

./: .gitignore  CMakeLists.txt  README.md  constant.h  field.xlsx  main.c  map.txt  test.c  test_v.c
headers/: constant.h  display.h  game.h  tools.h
image/: Republican_Emblem.xcf  infobar.xcf
resources/image/: Emblème_République_Galactique_test.xcf  coordonnées.txt
sources/: display.c  game.c  main.c  tools.c
